--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -7,7 +7,9 @@
     <div class="col-md-6">
       <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div *ngFor="let image of product?.product_images; let i = index"
+          @for (image of product?.product_images; track image.image_url; let i =
+          $index) {
+          <div
             class="carousel-item"
             [ngClass]="{'active': i === currentImageIndex}">
             <div class="square-image">
@@ -15,6 +17,8 @@
                 alt="Product Image">
             </div>
           </div>
+          }
+
         </div>
         <button class="carousel-control-prev" type="button"
           data-bs-target="#carouselExample"
@@ -31,13 +35,16 @@
       </div>
       <div class="row">
         <div class="thumbnail-container">
-          <div *ngFor="let image of product?.product_images; let i = index"
+          @for (image of product?.product_images; track image.image_url; let i =
+          $index) {
+          <div
             class="thumbnail-item"
             [ngClass]="{'active': i === currentImageIndex}"
             (click)="thumbnailClick(i)">
             <img [src]="image.image_url" class="thumbnail-image"
               alt="Thumbnail Image">
           </div>
+          }
         </div>
       </div>
     </div>
