--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,13 +10,15 @@
   <div class="search-box">
     <input type="text" class="form-control search-input"
       placeholder="Tìm sản phẩm"
-      [(ngModel)]="keyword">
+      [(ngModel)]="keyword" name="keyword">
     <select class="form-control product-category"
-      [(ngModel)]="selectedCategoryId">
+      [(ngModel)]="selectedCategoryId" name="category_name">
       <option [value]="0">Tất cả</option>
-      <option *ngFor="let category of categories" [value]="category.id">
+      @for (category of categories; track category.id) {
+      <option [value]="category.id">
         {{ category.name }}
       </option>
+      }
     </select>
     <button class="btn btn-primary ml-2" (click)="searchProducts()">Tìm
       kiếm</button>
@@ -24,7 +26,8 @@
 
   <!--  -->
   <div class="row">
-    <div class="col-lg-3 col-md-7" *ngFor="let product of products">
+    @for (product of products; track product.id) {
+    <div class="col-lg-3 col-md-7">
       <div class="product-item">
         <img [src]="product.url" alt="Product Image" class="product-image"
           (click)="onProductClick(product.id)">
@@ -47,38 +50,50 @@
             vào giỏ
             hàng</button>
           <span class="space-x"></span>
-          <button class="btn btn-success" (click)="buyNow()">Mua ngay</button>
+          <button class="btn btn-success" (click)="buyNow(product.id)">Mua
+            ngay</button>
         </div>
       </div>
     </div>
+    }
   </div>
 
   <div class="d-flex justify-content-center">
     <nav aria-label="Page navigation">
       <ul class="pagination">
-        <li class="page-item" *ngIf="currentPage > 1">
-          <a class="page-link" routerLink="/home"
+        @if (currentPage > 1) {
+        <li class="page-item">
+          <a class="page-link"
             (click)="onPageChange(1)">First</a>
         </li>
-        <li class="page-item" *ngIf="currentPage > 1">
-          <a class="page-link" routerLink="/home"
+        }
+        @if (currentPage > 1) {
+        <li class="page-item">
+          <a class="page-link"
             (click)="onPageChange(currentPage - 1)">Previous</a>
         </li>
-        <ng-container *ngFor="let page of visiblePages">
+        }
+        @for (page of visiblePages; track $index) {
+        <ng-container>
           <li class="page-item" [ngClass]="{'active': page === currentPage}">
             <a class="page-link" routerLink="/home"
               (click)="onPageChange(page)">{{ page
               }}</a>
           </li>
         </ng-container>
-        <li class="page-item" *ngIf="currentPage < totalPages">
-          <a class="page-link" routerLink="/home"
+        }
+        @if (currentPage < totalPages) {
+        <li class="page-item">
+          <a class="page-link"
             (click)="onPageChange(currentPage + 1)">Next</a>
         </li>
-        <li class="page-item" *ngIf="currentPage < totalPages">
-          <a class="page-link" routerLink="/home"
+        }
+        @if (currentPage < totalPages) {
+        <li class="page-item">
+          <a class="page-link"
             (click)="onPageChange(totalPages)">Last</a>
         </li>
+        }
       </ul>
     </nav>
   </div>
