--- a/src/app/components/order-detail/order.detail.component.html
+++ b/src/app/components/order-detail/order.detail.component.html
@@ -5,7 +5,8 @@
   </div>
 
   <!-- Thông tin người nhận -->
-  <div *ngIf="orderResponse" class="row">
+  @if (orderResponse) {
+  <div class="row">
     <div class="col-md-6">
       <h2 class="product-header">Thông tin người nhận</h2>
       <div class="mb-3">
@@ -48,7 +49,8 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of orderResponse.order_details">
+          @for (item of orderResponse.order_details; track item.id) {
+          <tr>
             <td>
               <div class="product-info">
                 <img [src]="item.product.thumbnail" alt="Product Image"
@@ -60,6 +62,7 @@
             <td>{{ item.price | number:'1.2-2' }}</td>
             <td>{{ item.total_money | number:'1.2-2' }}</td>
           </tr>
+          }
         </tbody>
       </table>
       <div class="text-start mt-3">
@@ -68,4 +71,5 @@
       </div>
     </div>
   </div>
+  }
 </div>
