--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -13,11 +13,12 @@
               [(ngModel)]="phoneNumber"
               (input)="onPhoneNumberChange()">
             <div class="divider-nospace"></div>
-            <p class="text-danger"
-              *ngIf="phoneNumber.length < 6 && registerForm.form.touched">Số
+            @if (phoneNumber.length < 6 && registerForm.form.touched) {
+            <p class="text-danger">Số
               điện thoại phải
               có ít nhất 6 ký tự
             </p>
+            }
           </div>
 
           <div class="mt-3"></div>
@@ -36,10 +37,11 @@
                 (click)="togglePasswordVisibility()"></i>
             </div>
             <div class="divider-nospace"></div>
-            <p class="text-danger"
-              *ngIf="password.length < 6 && registerForm.form.touched">Mật khẩu
+            @if (password.length < 6 && registerForm.form.touched) {
+            <p class="text-danger">Mật khẩu
               phải có ít nhất 6 ký tự
             </p>
+            }
           </div>
 
           <div class="mt-3"></div>
@@ -54,13 +56,14 @@
                 required>
             </div>
             <div class="divider-nospace"></div>
-            <p class="text-danger"
-              *ngIf="retypePassword.length < 6 && registerForm.form.touched">
+            @if (retypePassword.length < 6 && registerForm.form.touched) {
+            <p class="text-danger">
               Mật khẩu phải có ít nhất 6 ký tự
             </p>
-            <p class="text-danger"
+            }
+            <p
               *ngIf="registerForm.controls['retypePassword']?.hasError('passwordMismatch')
-                            && registerForm.form.touched ">
+            && registerForm.form.touched" class="text-danger">
               Mật khẩu không khớp
             </p>
           </div>
@@ -73,10 +76,11 @@
               [(ngModel)]="fullName"
               required>
             <div class="divider-nospace"></div>
-            <p class="text-danger"
-              *ngIf="isFullNameInvalid() && registerForm.form.touched">
+            @if (isFullNameInvalid() && registerForm.form.touched) {
+            <p class="text-danger">
               Họ và tên không được để tróng
             </p>
+            }
           </div>
 
           <div class="mt-3"></div>
@@ -88,9 +92,9 @@
               (input)="checkAge()"
               required>
             <div class="divider-nospace"></div>
-            <p class="text-danger"
+            <p
               *ngIf="registerForm.controls['dateOfBirth']?.hasError('invalidAge')
-                            && registerForm.form.touched">
+            && registerForm.form.touched" class="text-danger">
               Bạn chưa đủ 18 tuổi
             </p>
           </div>
@@ -103,10 +107,11 @@
               [(ngModel)]="addRess"
               required>
             <div class="divider-nospace"></div>
-            <p class="text-danger"
-              *ngIf="isAddRessInvalid() && registerForm.form.touched">
+            @if (isAddRessInvalid() && registerForm.form.touched) {
+            <p class="text-danger">
               Địa chỉ không được để tróng
             </p>
+            }
           </div>
           <div class="form-group">
             <div class="form-check checkbox-text">
