--- a/src/app/components/admin/user.admin/user.admin.component.html
+++ b/src/app/components/admin/user.admin/user.admin.component.html
@@ -44,8 +44,19 @@
         <td><button type="button" class="btn btn-outline-warning"
             (click)="updateUser(user.id)">Cập
             nhật</button></td>
-        <td><button type="button"
-            class="btn btn-outline-danger">Xoá</button></td>
+        <td>
+          @if (user.active) {
+          <button type="button"
+            class="btn btn-outline-danger" style="width: 98px;"
+            (click)="deleteUser(user.id, user.active)">Xoá</button>
+          }
+          @else {
+          <button type="button"
+            class="btn btn-outline-danger" style="width: 98px;"
+            (click)="deleteUser(user.id, user.active)">Khôi
+            phục</button>
+          }
+        </td>
       </tr>
       }
     </tbody>
