--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -67,5 +67,57 @@
         </div>
       </div>
     </div>
+    <div class="col-md-12">
+      <h4 class="mb-4" style="color: red;">Đánh giá sản phẩm</h4>
+      <!-- Question Input Box -->
+      <div class="card mb-4">
+        <div class="card-body d-flex">
+          <img src="https://example.com/your-image.png" alt="User Avatar"
+            class="me-3" style="width: 60px;">
+          <div class="flex-grow-1">
+            <textarea class="form-control mb-2" rows="3"
+              placeholder="Xin mời để lại câu hỏi..."
+              [(ngModel)]="commentData.content"
+              name="content"></textarea>
+            <div class="d-flex justify-content-end">
+              <button class="btn btn-danger" (click)="addComment()">Gửi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Comment Section -->
+      <div class="card mb-3">
+        @for (comment of comments; track comment.id) {
+        <div class="card-body">
+
+          <div class="question-box">
+            <div class="question-header">
+              <h6 class="mb-0"><strong>{{comment.user.fullname}}</strong></h6>
+              <span class="comment-time">{{comment.createdAt | date}}</span>
+            </div>
+            <p class="comment-text">{{comment.content}}</p>
+            <div class="d-flex justify-content-end">
+              <span class="reply-btn">Trả lời</span>
+            </div>
+          </div>
+        </div>
+        }
+      </div>
+
+      <!-- <div class="card mb-3 ms-5">
+        <div class="card-body">
+          <div class="question-box">
+            <div class="question-header">
+              <h6 class="mb-0"><strong>Quản Trị Viên</strong> <span
+                  class="admin-badge">QTV</span></h6>
+              <span class="comment-time">4 ngày trước</span>
+            </div>
+            <p class="comment-text">CellphoneS xin chào anh Hoang Cao. Dạ, Nokia
+              3210 4G chưa hỗ trợ phát wifi rồi ạ.</p>
+            <p class="comment-text">Thân mến.</p>
+          </div>
+        </div>
+      </div> -->
+    </div>
   </div>
 </div>
