--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -32,7 +32,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/admin/products']">
+            <a class="nav-link" [routerLink]="['/admin/roles']">
               <i class="fab fa-codepen icon"></i>Role
             </a>
           </li>
@@ -44,6 +44,11 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/admin/products']">
               <i class="fab fa-codepen icon"></i>Socical-Account
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/admin/comments']">
+              <i class="fab fa-codepen icon"></i>Comment
             </a>
           </li>
           <li class="nav-item">
