--- a/src/app/components/order-purchase/order-purchase.component.scss
+++ b/src/app/components/order-purchase/order-purchase.component.scss
@@ -140,8 +140,10 @@
 
     .review-deadline {
       margin-bottom: 5px;
+      font-size: 15px;
 
       span {
+        font-size: 15px;
         color: #E53935;
       }
     }
