--- a/src/app/components/admin/order-detail.admin/order-detail.admin.component.html
+++ b/src/app/components/admin/order-detail.admin/order-detail.admin.component.html
@@ -9,6 +9,7 @@
         <p><strong>Full Name:</strong> {{ orderResponse.fullname }}</p>
         <p><strong>Phone Number:</strong> {{ orderResponse.phone_number }}</p>
         <p><strong>Email:</strong> {{ orderResponse.email }}</p>
+        <p><strong>Coupon Code:</strong> {{ couponCode }}</p>
       </div>
       <div class="col-md-6">
         <p><strong>Address:</strong> {{ orderResponse.address }}</p>
