--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -20,6 +20,16 @@
             </p>
             }
           </div>
+          
+          <div class="mt-3"></div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" id="phoneNumber"
+              name="email"
+              required
+              [(ngModel)]="email">
+            <div class="divider-nospace"></div>
+          </div>
 
           <div class="mt-3"></div>
           <div class="form-group password-field">
